--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,10 @@
         <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
     <body>
-        <!-- Temporary body stolen from http://jmcglone.com/guides/github-pages/ -->
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/projects">Projects</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
@@ -21,8 +19,8 @@
 		</div>
 		<footer>
     		<ul>
-        		<li><a href="mailto:alex.aquus@googlemail.com">email</a></li>
-        		<li><a href="https://github.com/obsidianeagle">github.com/obsidianeagle</a></li>
+        		<li><a href="mailto:alex.aquus@googlemail.com">Email</a> | </li>
+        		<li><a href="https://github.com/obsidianeagle">Github.com/ObsidianEagle</a></li>
 			</ul>
 		</footer>
 	</body>
