--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,15 @@
 /*
 Colour scheme:
-    Dark (Background) - #251B40
-    Light (Text) - #E7DFDD
-    Violet (Accents) - #8E40D2
-    Indigo (Features) - #4717F6
+    Light Gray: #F2F2F2
+    Blue: #6CC0DA
+    Red: #EF4723
+    Black: #000000
 */
 
 body {
     margin: 60px auto;
     width: 70%;
-    background-color: #251B40;
+    background-color: #F2F2F2;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Verdana', 'Sans-Serif';
@@ -23,7 +23,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #8E40D2;
+    color: #EF4723;
 }
 a:hover {
     text-decoration: underline;
@@ -31,16 +31,16 @@ a:hover {
 h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Verdana', 'Sans-Serif';
-    color: #E7DFDD;
+    color: #6CC0DA;
 }
 p {
     font-size: 1.5em;
     line-height: 1.4em;
     font-family:'Helvetica', 'Verdana', 'Sans-Serif';
-    color: #E7DFDD;
+    color: #000000;
 }
 footer {
-    border-top: 1px solid #d5d5d5;
+    border-top: 1px solid #000000;
     font-size: .8em;
 }
 
@@ -55,5 +55,5 @@ ul.posts li {
 
 span {
     font-family:'Helvetica', 'Verdana', 'Sans-Serif';
-    color: #E7DFDD;
+    color: #000000;
 }
