--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ a:hover {
 h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Verdana', 'Sans-Serif';
-    color: #6CC0DA;
+    color: #5ca6e0;
 }
 p {
     font-size: 1.5em;
