--- a/css/main.css
+++ b/css/main.css
@@ -11,34 +11,41 @@ body {
     width: 70%;
     background-color: #F2F2F2;
 }
+
 nav ul, footer ul {
     font-family:'Helvetica', 'Verdana', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
 }
+
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
+
 a {
     text-decoration: none;
     color: #EF4723;
 }
+
 a:hover {
     text-decoration: underline;
 }
+
 h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Verdana', 'Sans-Serif';
     color: #5ca6e0;
 }
+
 p {
     font-size: 1.5em;
     line-height: 1.4em;
     font-family:'Helvetica', 'Verdana', 'Sans-Serif';
     color: #000000;
 }
+
 footer {
     border-top: 1px solid #000000;
     font-size: .8em;
@@ -56,4 +63,8 @@ ul.posts li {
 span {
     font-family:'Helvetica', 'Verdana', 'Sans-Serif';
     color: #000000;
+}
+
+centered {
+    text-align: center;
 }
