--- a/main.css
+++ b/main.css
@@ -1,4 +1,35 @@
 body {
   background-color: black;
   color: white;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.item {
+  width: 200px;
+  margin: 20px;
+  opacity: 0.6;
+  transition: 0.3s;
+  display: flex;
+  justify-content: center;
+}
+
+.item img {
+  width: 100%;
+}
+
+.item p {
+  width: 100%;
+  font-size: 2em;
+}
+
+.active:hover {
+  opacity: 1;
 }
