--- a/main.css
+++ b/main.css
@@ -13,7 +13,6 @@ body {
 }
 
 .item {
-  width: 200px;
   margin: 20px;
   opacity: 0.6;
   transition: 0.3s;
@@ -22,11 +21,10 @@ body {
 }
 
 .item img {
-  width: 100%;
+  height: 200px;
 }
 
 .item p {
-  width: 100%;
   font-size: 2em;
 }
 
