--- a/main.css
+++ b/main.css
@@ -21,14 +21,14 @@ body {
 }
 
 .item img {
-  width: 30%;
-  padding-top: 100%;
+  height: 60vh;
+  width: 60vh;
 }
 
 .item p {
-  font-size: 2em;
+  font-size: 4em;
   text-align: center;
-  margin-top: 5px;
+  margin-top: 0px;
 }
 
 .active:hover {
