Add 2021 eurovision page

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
-  background-color: black;
-  color: white;
+  background-color: #1A1A1A;
+  color: #F0F0F0;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
