--- a/eurovision/styles.css
+++ b/eurovision/styles.css
@@ -15,20 +15,9 @@ li {
   margin: 1em auto;
 }
 
-.covid-rules {
-  background-color: palevioletred;
-  padding: 2em;
-  border-radius: 2em;
-  margin-top: 2em;
-}
-
-.covid-rules h2 {
-  text-align: center;
-  margin: 0;
-}
-
-.covid-rules h3 {
-  text-align: center;
+.ukraine-rule {
+  background-color: #0398fc;
+  color: #fcdb03;
 }
 
 .drink-counter {
